# src/router/products.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import getProducts from '../business/rules/get-products';
 import getProductsByCategory from '../business/rules/get-products-by-category';
+import getCheckout from '../business/rules/get-checkout';
 
 const productRouter = Router();
 productRouter.get('/v1/supermarkets/:cep/products', async (req, res, next) => {
@@ -30,6 +31,40 @@ productRouter.get('/v1/supermarkets/:cep/products', async (req, res, next) => {
 
   try {
     const response = await getProducts(cep, servicesUrl, name?.toString());
+    res.status(200).json(response);
+    return next();
+  } catch (error) {
+    return next(error);
+  }
+});
+
+productRouter.get('/v1/supermarkets/:cep/products/checkout', async (req, res, next) => {
+  const { cep } = req.params;
+  const { data } = req.body;
+  const {
+    config: {
+      services: {
+        supermarket: {
+          url: supermarketUrl,
+        },
+        product: {
+          url: productUrl,
+        },
+        price: {
+          url: priceUrl,
+        },
+      },
+    },
+  } = res.app.locals;
+
+  const servicesUrl = {
+    supermarketUrl,
+    productUrl,
+    priceUrl,
+  };
+
+  try {
+    const response = await getCheckout(cep, data, servicesUrl);
     res.status(200).json(response);
     return next();
   } catch (error) {
